# Agentic-AI-Engineering-2025

./: README.md
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/: README.md
3_crew/coder/output/: code_and_output.txt
3_crew/debate2/: pyproject.toml
3_crew/debate2/output/: decide.md  oppose.md  propose.md
3_crew/engineering_team/: OUTPUTS.md  README.md
3_crew/financial_researcher/output/: report.md
3_crew/linkedin_profile_finder/: README.md  pyproject.toml
3_crew/linkedin_profile_finder/output/: linkedin_profile_finder_output.md
3_crew/linkedin_profile_finder/src/linkedin_profile_finder/: crew.py  main.py
3_crew/linkedin_profile_finder/src/linkedin_profile_finder/config/: agents.yaml  tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent2.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  idea1.md  idea10.md  idea4.md  idea5.md  idea6.md  idea7.md  tickets.db  world.py
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb
6_mcp/memory/: nick.db
6_mcp/sandbox/: ai_engineer_roadmap.md  mcp_tools.md
guides/: 10_intermediate_python.ipynb  13_generators_decorators_args_and_kwargs.ipynb  14_cursor_helper_python.md
(+9 files in other folders)
